--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,13 @@
 /* Main Styling */
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
-/* body text */
-body {
-  font-family: "IBM Plex Sans", "Source Serif Pro"
-}
-
 figure {
   padding-top: 20px;
+}
+
+/* body text and headings */
+body {
+  font-family: "IBM Plex Sans", "Source Serif Pro"
 }
 
 h1.hide {
@@ -48,8 +48,16 @@ strong {
   font-weight: 600;
 }
 
+/* Style links */
 a[href] {
-  color: #2E7636
+  color: #2E7636;
+  text-decoration: none;
+}
+
+a[href]:hover,
+a[href]:active {
+  color: #2E7636;
+  text-decoration: underline;
 }
 
 /* Button Style */
@@ -146,8 +154,22 @@ form[class^="oi-"] button:active {
   background: #DCDCDC;
 }
 
-/* 
-form[class^="oi-"] input[type=checkbox] {
-  width: 16px;
-  height: 24px;
-} */
+/* Class for floating TOC */
+
+.floating-toc {
+  position: fixed;
+  bottom:0;
+  left:0;
+  right:0;
+  padding: 10px;
+  background: #fff;
+  border-top: 1px solid #ccc;
+  z-index: 100;
+  text-align: center; 
+}
+
+a.toc-link.active {
+  font-weight: bold;
+  /* color: #d66b44;  */
+  text-decoration: underline;
+}
