--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,27 @@
 /* Main Styling */
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
+:root {
+  color-scheme: light dark;
+  --blue: #1e90ff;
+  --white: #ffffff; 
+  --atlasGreen: #2E7636;
+}
+
 figure {
   padding-top: 20px;
 }
 
 /* body text and headings */
 body {
-  font-family: "IBM Plex Sans", "Source Serif Pro"
+  /* max-width: 1000px;
+  margin-left: auto; 
+  margin-right: auto;
+  padding: 2rem; */
+  /* ^^^ This is only needed if no theme used */
+  font-family: "IBM Plex Sans", "Source Serif Pro";
+  color: light-dark(#333b3c, #efefec);
+  background-color: light-dark(white, #292929);
 }
 
 h1.hide {
@@ -23,7 +37,17 @@ h1.hide {
 h1 {
   font-size: 32px;
   font-weight: 700;
+  /* text-align: center; */
   /* padding-top: 50px; */
+}
+
+h1.title {
+  text-align: center;
+  font-size: 40;
+}
+
+h2.key-insights {
+  text-align: center;
 }
 
 h2 {
@@ -48,15 +72,22 @@ strong {
   font-weight: 600;
 }
 
+.nav-item {
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
+  margin-left: 10px;
+}
+
 /* Style links */
-a[href] {
-  color: #2E7636;
+main a[href] {
+  color: var(--atlasGreen);
   text-decoration: none;
 }
 
 a[href]:hover,
 a[href]:active {
-  color: #2E7636;
+  color: var(--atlasGreen);
   text-decoration: underline;
 }
 
@@ -137,7 +168,7 @@ form[class^="oi-"] div {
 }
 
 [class^="oi-"] input {
-  accent-color: #2E7636;
+  accent-color:var(--atlasGreen);
 }
 
 form[class^="oi-"] button {
@@ -172,4 +203,12 @@ a.toc-link.active {
   font-weight: bold;
   /* color: #d66b44;  */
   text-decoration: underline;
+}
+
+.hero_image {
+  width: 100%;
+  height: 175px;
+  object-fit: cover;
+  overflow: hidden;
+  /* margin-bottom: -23px; */
 }
