--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
 /* css styles */
 
+/* hides error messages - good for Production, bad for development */
+.observablehq--error {  
+  display: none;
+}
+
 .navbar-logo {
   max-height: 65px;
 }
