--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 /* css styles */
 
 /* hides error messages - good for Production, bad for development */
-.observablehq--error {  
+/* .observablehq--error {  
   display: none;
-}
+} */
 
 .navbar-logo {
   max-height: 65px;
