Add translation doc

--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,22 @@ form[class^="oi-"] button:active {
   background: #DCDCDC;
 }
 
+/* Options to make checkbox underline a bit better */
+/* form[class*="checkbox"] > label {
+  width: auto !important;
+  padding-right: 14px !important;
+  border-bottom: 1px solid #333;
+  
+  
+}
+
+form[class*="checkbox"] {
+  display: flex;
+  flex-direction: column !important;
+  align-items: flex-start !important;
+} */
+
+
 /* Class for floating TOC */
 
 .floating-toc {
