fix: correct the wrong path image issue for GH pages.

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 /* css styles */
 
-/* hides error messages - good for Production, bad for development */
-/* .observablehq--error {  
+/* hides error briefly shown messages - good for Production, bad for development */
+.observablehq--error {  
   display: none;
-} */
+}
 
 .navbar-logo {
   max-height: 65px;
