--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,10 @@ strong {
   margin-left: 10px;
 }
 
+.cell-output, .cell-output-display {
+  overflow: visible !important;
+}
+
 /* Style links */
 main a[href] {
   color: var(--atlasGreen);
