fix(CSS input labels): the label styling was messing up the checkbox format. This fixes the bug and makes the checkboxes appear in-line again

--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,6 @@
 /* Main Styling */
 
 :root {
-  --blue: #1e90ff;
-  --white: #ffffff; 
   --atlasGreen: #2E7636;
   --atlasOrange: #D66B44;
 }
@@ -103,9 +101,10 @@ form[class^="oi-"] div {
   accent-color: var(--atlasGreen);
 }
 
-.observablehq label {
+/* Target the labels for the observable inputs */
+form[class^="oi-"]>label {
   padding: 8px 0 !important;
-  font-family: "IBM Plex Sans", system-ui, sans-serif !important;
+  font-family: "IBM Plex Sans", system-ui, sans-serif;
   font-size: 12px;
   font-weight: 600;
   color: #4a5568 !important;
@@ -113,14 +112,24 @@ form[class^="oi-"] div {
   border-bottom: 1px solid #333;
   width: 100% !important;
   margin-bottom: 4px !important;
-  display: block !important;
 }
+
+/* .observablehq label { */
+/*   padding: 8px 0 !important; */
+/*   font-family: "IBM Plex Sans", system-ui, sans-serif !important; */
+/*   font-size: 12px; */
+/*   font-weight: 600; */
+/*   color: #4a5568 !important; */
+/*   text-transform: uppercase; */
+/*   border-bottom: 1px solid #333; */
+/*   width: 100% !important; */
+/*   margin-bottom: 4px !important; */
+/*   display: block !important; */
+/* } */
 
 .observablehq select {
   height: 40px;
 }
-
-
 
 .observablehq button {
   background: #FFFFFF;
@@ -160,10 +169,6 @@ form[class^="oi-"] div {
   border-color: var(--atlasGreen) !important;
   box-shadow: 0 0 0 3px rgba(33, 103, 41, 0.1) !important;
   outline: none !important;
-}
-
-.observablehq input[type="checkbox"][role="switch"]:checked {
-  background: #216729 !important;
 }
 
 /* Options to make checkbox underline a bit better */
