--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,8 @@
 :root {
   --atlasGreen: #2E7636;
   --atlasOrange: #D66B44;
+  --atlasDarkGray: #4a5568;
+  --atlasLightGray: #C9C9C9;
 }
 
 html {
@@ -92,7 +94,7 @@ form[class^="oi-"] {
 }
 
 form[class^="oi-"] div {
-  font-family: "IBM Plex Sans";
+  font-family: "IBM Plex Sans", system-ui, sans-serif;
   font-size: 14px;
   padding: 12px 0;
 }
@@ -107,33 +109,20 @@ form[class^="oi-"]>label {
   font-family: "IBM Plex Sans", system-ui, sans-serif;
   font-size: 12px;
   font-weight: 600;
-  color: #4a5568 !important;
+  color: black !important;
   text-transform: uppercase;
-  border-bottom: 1px solid #333;
+  border-bottom: 1px solid black;
   width: 100% !important;
   margin-bottom: 4px !important;
 }
-
-/* .observablehq label { */
-/*   padding: 8px 0 !important; */
-/*   font-family: "IBM Plex Sans", system-ui, sans-serif !important; */
-/*   font-size: 12px; */
-/*   font-weight: 600; */
-/*   color: #4a5568 !important; */
-/*   text-transform: uppercase; */
-/*   border-bottom: 1px solid #333; */
-/*   width: 100% !important; */
-/*   margin-bottom: 4px !important; */
-/*   display: block !important; */
-/* } */
 
 .observablehq select {
   height: 40px;
 }
 
 .observablehq button {
-  background: #FFFFFF;
-  border: 1px solid black;
+  background: white;
+  border: 1px solid var(--atlasLightGray);
   padding: 10px 20px;
 }
 
@@ -146,14 +135,14 @@ form[class^="oi-"]>label {
 .observablehq input,
 .observablehq select,
 .observablehq textarea {
-  border: 2px solid #cbd5e0 !important;
+  border: 2px solid var(--atlasLightGray) !important;
   border-radius: 8px !important;
   padding: 8px 12px !important;
   font-size: 14px !important;
   font-family: "IBM Plex Sans", system-ui, sans-serif !important;
   background: white !important;
   transition: all 0.2s ease !important;
-  color: #374151 !important;
+  color: var(--atlasDarkGray)) !important;
 }
 
 .observablehq input:hover,
