--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,11 @@
 html {
   scroll-behavior: smooth;
 }
+
+body {
+  padding-bottom: 70px; /* for the floating TOC */
+}
+
 @media (prefers-reduced-motion: reduce) {
   html {
     scroll-behavior: auto;
@@ -99,7 +104,7 @@ form[class^="oi-"] {
 form[class^="oi-"] div {
   font-family: "IBM Plex Sans", system-ui, sans-serif;
   font-size: 14px;
-  padding: 12px 0;
+  /* padding: 12px 0; */
 }
 
 [class^=oi-] input {
@@ -120,7 +125,7 @@ form[class^="oi-"]>label {
   display: block;
 }
 
-/* NOTE: These classes are more broad than previous. 
+/* NOTE: These classes are more broad than previous.
 * If it causes issues, revert to [class^="oi-"] */
 .observablehq select {
   height: 40px;
