feat(toc): Re-write TOC in plain JS rather than OJS to watch all headings and auto-reload on change. Also add a web component for a back to top button

--- a/styles.css
+++ b/styles.css
@@ -226,19 +226,18 @@ form[class*="checkbox"] {
   }
 }
 
-
 /* Floating side TOC  */
 .atlas-toc {
   position: fixed;
-  top: 135px;
-  left: 22px;
-  width: 12vw;
-  max-width: 350px;
+  /* top: 135px; */
+  /* left: 20px; */
+  right: 3rem;
+  width: 13vw;
+  max-width: 300px;
   min-width: 100px;
-  overflow-y: auto;
   padding: 10px 16px;
-  z-index: 11;
-  backdrop-filter: blur(10px);
+  top: 10rem;
+  overflow-wrap: break-word;
 }
 
 /* TOC heading */
@@ -275,4 +274,3 @@ form[class*="checkbox"] {
     display: none;
   }
 }
-
