feat(styles&_quarto): Update styling and body width so TOC works better

--- a/styles.css
+++ b/styles.css
@@ -97,6 +97,7 @@ a[href]:active {
 /* Observable Inputs Styling */
 form[class^="oi-"] {
   flex-wrap: wrap !important;
+  margin-bottom: 15px !important;
 }
 
 form[class^="oi-"] div {
@@ -132,6 +133,7 @@ form[class^="oi-"]>label {
 .observablehq button {
   background: white;
   border: 1px solid var(--atlasLightGray);
+  color: black;
   padding: 10px 20px;
 }
 
@@ -228,19 +230,18 @@ form[class*="checkbox"] {
   }
 }
 
-
 /* Floating side TOC  */
 .atlas-toc {
   position: fixed;
   top: 135px;
-  left: 22px;
+  left: 10px;
   width: 12vw;
-  max-width: 350px;
   min-width: 100px;
   overflow-y: auto;
-  padding: 10px 16px;
-  z-index: 11;
-  backdrop-filter: blur(10px);
+  padding: 10px;
+  background-color: #F8F9FA;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
 }
 
 /* TOC heading */
@@ -260,6 +261,9 @@ form[class*="checkbox"] {
   color: #442;
   font-size: 1rem;
   line-height: -1.4;
+  
+  padding-left: 0.5em;
+  text-indent: -0.5em;
 }
 
 .atlas-toc a.toc-link:hover {
@@ -272,7 +276,7 @@ form[class*="checkbox"] {
   text-decoration: underline;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1200px) {
   .atlas-toc {
     display: none;
   }
