--- a/styles.css
+++ b/styles.css
@@ -236,13 +236,12 @@ form[class*="checkbox"] {
 .atlas-toc {
   position: fixed;
   top: 135px;
-  left: 22px;
+  left: 10px;
   width: 12vw;
-  max-width: 350px;
   min-width: 100px;
   overflow-y: auto;
-  padding: 10px 16px;
-  z-index: 11;
+  padding: 10px;
+  background-color: #FFFF;
 }
 
 /* TOC heading */
@@ -261,7 +260,11 @@ form[class*="checkbox"] {
   text-decoration: none;
   color: #442;
   font-size: 1rem;
-  line-height: -1.4;
+  margin-bottom: 0.6rem;
+
+  /* Indentation */
+  padding-left: 0.5em;
+  text-indent: -0.5em;
 }
 
 .atlas-toc a.toc-link:hover {
@@ -274,7 +277,7 @@ form[class*="checkbox"] {
   text-decoration: underline;
 }
 
-@media (max-width: 1300px) {
+@media (max-width: 1200px) {
   .atlas-toc {
     display: none;
   }
