style(toc): update TOC css to be same as v1 notebooks

--- a/styles.css
+++ b/styles.css
@@ -229,15 +229,15 @@ form[class*="checkbox"] {
 /* Floating side TOC  */
 .atlas-toc {
   position: fixed;
-  /* top: 135px; */
-  /* left: 20px; */
-  right: 3rem;
-  width: 13vw;
-  max-width: 300px;
+  top: 135px;
+  left: 10px;
+  width: 12vw;
   min-width: 100px;
-  padding: 10px 16px;
-  top: 10rem;
-  overflow-wrap: break-word;
+  overflow-y: auto;
+  padding: 10px;
+  background-color: #F8F9FA;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
 }
 
 /* TOC heading */
@@ -256,7 +256,11 @@ form[class*="checkbox"] {
   text-decoration: none;
   color: #442;
   font-size: 1rem;
-  line-height: -1.4;
+  margin-bottom: 0.6rem;
+
+  /* Indentation */
+  padding-left: 0.5em;
+  text-indent: -0.5em;
 }
 
 .atlas-toc a.toc-link:hover {
@@ -269,7 +273,7 @@ form[class*="checkbox"] {
   text-decoration: underline;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1200px) {
   .atlas-toc {
     display: none;
   }
