--- a/styles.css
+++ b/styles.css
@@ -235,9 +235,7 @@ form[class*="checkbox"] {
   min-width: 100px;
   overflow-y: auto;
   padding: 10px;
-  background-color: #F8F9FA;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+  background-color: #FFFF;
 }
 
 /* TOC heading */
